# coolgames

./: CMakeLists.txt  backgroundsmiski.h  main.cpp  mainPlayer.h  smiski.h  smiskimain.cpp  textbox.h
